- redirect{s@foo@bar@} can be used to redirect to a rewritten
  version of the original URL.
- Trap unsupported gopher proxy requests.
- Fixed a bug in the User Manual delivery on Windows
  (mingw32 only). Images now show up correctly and HTML
  pages are no longer padded with garbage data.
- Fixed small memory leak in case of config file reloads.
- Only unlink the pidfile if it's actually used.
	
*** Version 3.0.6 ***

- New content filters: no-ping, google, msn, yahoo and blogspot.
- New header filters:  x-httpd-php-to-html, html-to-xml, xml-to-html
                       and hide-tor-exit-notation.
- The special header "X-Filter: No" now disables header filtering as well.
- Improved the filters img-reorder, js-annoyances, webbugs,
  banners-by-size, banners-by-link and ie-exploits to make them
  less likely to break anything.
- Removed outdated URL patterns in default.action and added new ones. 
- Added redirection from http://p.p/user-manual to http://p.p/user-manual/
- Changed webinterface default values for hide-user-agent, hide-referrer
  and set-image-blocker.
	
*** Version 3.0.5 ***

- Windows version can be installed/started as a service.
- Windows icon stays blue when Privoxy is idle, green when busy.
- Integrated Fabian Keil's extensive patch.  See:
  http://www.fabiankeil.de/sourcecode/privoxy/. Includes the 
  following new or significantly improved actions (among many 
  other improvements):

     content-type-overwrite{}
     crunch-client-header{string}
     crunch-if-none-match
     crunch-server-header{string}
     fast-redirects{check-decoded-url}
     filter-client-headers
     filter-server-headers
     force-text-mode
     handle-as-empty-document
     hide-accept-language{}
     hide-content-disposition{}
     hide-if-modified-since
     hide-referrer{conditional-block}
     overwrite-last-modified{}
     redirect{URL}
     treat-forbidden-connects-like-blocks

- Standard-compliant clients are prevented from displaying cached